Adding Dto classes